Fixing the focus area icons on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -761,7 +761,7 @@ button {
     }
     .stat-tabs-nav {
       top:90px;
-      left:2%;
+      left:0;
       div {
         width:40px;
         height:40px;
